--- a/pages/index.html
+++ b/pages/index.html
@@ -6,132 +6,247 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="../style/reset.css" />
         <link rel="stylesheet" href="../style/public .css" />
+        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
         <link rel="stylesheet" href="../style/ybd.css" />
+        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+        <script src="../js/ybd.js"></script>
         <title>盈蓓德官网</title>
     </head>
     <body>
-        <div class="header">
-            <div class="wrap">
-                <a href="#">
-                    <img
-                        class="logo"
-                        alt="盈蓓德官网"
-                        width="106px"
-                        height="40px"
-                        src="../images/home/nav_logo_ybd@2x.png"
-                    />
-                </a>
-                <ul class="nav">
-                    <li>首页</li>
-                    <li>
-                        软件产品
-                        <div class="dropdown">
-                            <i class="triangle"></i>
-                            <ul>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                            </ul>
+        <div class="home" style="height: 10000px;">
+            <div class="header">
+                <div class="mod-wrap">
+                    <a href="#">
+                        <img
+                            class="logo"
+                            alt="盈蓓德官网"
+                            width="106px"
+                            height="40px"
+                            src="../images/home/nav_logo_ybd@2x.png"
+                        />
+                    </a>
+                    <ul class="nav">
+                        <li>首页</li>
+                        <li>
+                            软件产品
+                            <div class="dropdown">
+                                <i class="triangle"></i>
+                                <ul>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            仪器设备
+                            <div class="dropdown">
+                                <i class="triangle"></i>
+                                <ul>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            测试系统
+                            <div class="dropdown">
+                                <i class="triangle"></i>
+                                <ul>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                    <li>消费电子</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>技术服务</li>
+                        <li>关于我们</li>
+                        <li>联系我们</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="banner">
+                <h2 class="home-title">全生命周期监测<i></i>让产品创造价值</h2>
+            </div>
+
+            <div class="main">
+                <div class="secion-prod mod-wrap">
+                    <div class="mod-title">
+                        <h2 class="ybd-title-black-32">软件产品</h2>
+                        <i></i>
+                    </div>
+                    <div class="content">
+                        <div class="item">
+                            <a href="#"
+                                ><img
+                                    src="../images/home/home_img_edaq@2x.png"
+                                    alt=""
+                                    width="310"
+                                    height="243"
+                            /></a>
+                            <p class="ybd-text-black-20">eDAQ</p>
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
                         </div>
-                    </li>
-                    <li>
-                        仪器设备
-                        <div class="dropdown">
-                            <i class="triangle"></i>
-                            <ul>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                            </ul>
+                        <div class="item">
+                            <a href="#"
+                                ><img
+                                    src="../images/home/home_img_evt@2x.png"
+                                    alt=""
+                                    width="310"
+                                    height="243"
+                            /></a>
+                            <p class="ybd-text-black-20">EVT</p>
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
                         </div>
-                    </li>
-                    <li>
-                        测试系统
-                        <div class="dropdown">
-                            <i class="triangle"></i>
-                            <ul>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                                <li>消费电子</li>
-                            </ul>
+                        <div class="item">
+                            <a href="#"
+                                ><img
+                                    src="../images/home/home_img_ept@2x.png"
+                                    alt=""
+                                    width="310"
+                                    height="243"
+                            /></a>
+                            <p class="ybd-text-black-20">EPT</p>
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
                         </div>
-                    </li>
-                    <li>技术服务</li>
-                    <li>关于我们</li>
-                    <li>联系我们</li>
-                </ul>
+                    </div>
+                </div>
+                <div class="secion-device">
+                    <div class="mod-wrap">
+                        <div class="mod-title" style="margin-bottom: 22px;">
+                            <h2 class="ybd-title-black-32" style="color: #fff;">仪器设备</h2>
+                            <i></i>
+                        </div>
+                        <div class="swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div
+                                        class="swiper-img"
+                                        style="background: url('../images/home/home_img_epad@2x.png') no-repeat center bottom"
+                                    ></div>
+                                    <p class="ybd-text-white-20">ePad</p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div
+                                        class="swiper-img"
+                                        style="background: url('../images/home/home_img_ebox@2x.png') no-repeat center bottom"
+                                    ></div>
+                                    <p class="ybd-text-white-20">eBox</p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div
+                                        class="swiper-img"
+                                        style="background: url('../images/home/home_img_enode@2x.png') no-repeat center bottom"
+                                    ></div>
+                                    <p class="ybd-text-white-20">eNode</p>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div
+                                        class="swiper-img"
+                                        style="background: url('../images/home/home_img_enode@2x.png') no-repeat center bottom"
+                                    ></div>
+                                    <p class="ybd-text-white-20">ePad</p>
+                                </div>
+                            </div>
+                            <div class="swiper-button swiper-button-prev"></div>
+                            <div class="swiper-button swiper-button-next"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="secion-test mod-wrap">
+                    <div class="mod-title">
+                        <h2 class="ybd-title-black-32">测试系统</h2>
+                        <i></i>
+                    </div>
+                    <div class="content">
+                        <div class="item">
+                            <img
+                                src="../images/home/icon_car@2x.png "
+                                alt=""
+                                width="70"
+                                height="70px"
+                            />
+                            <p class="ybd-text-black-20">汽车</p class="ybd-text-black-20">
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
+                        </div>
+                        <div class="item">
+                            <img
+                                src="../images/home/icon_dianzi@2x.png "
+                                alt=""
+                                width="70"
+                                height="70px"
+                            />
+                            <p class="ybd-text-black-20">消费电子</p class="ybd-text-black-20">
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
+                        </div>
+                        <div class="item">
+                            <img
+                                src="../images/home/icon_jungong@2x.png "
+                                alt=""
+                                width="70"
+                                height="70px"
+                            />
+                            <p class="ybd-text-black-20">军工</p class="ybd-text-black-20">
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
+                        </div>
+                        <div class="item">
+                            <img
+                                src="../images/home/icon_ship@2x.png "
+                                alt=""
+                                width="70"
+                                height="70px"
+                            />
+                            <p class="ybd-text-black-20">船舶</p class="ybd-text-black-20">
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
+                        </div>
+                        <div class="item">
+                            <img
+                                src="../images/home/icon_power@2x.png "
+                                alt=""
+                                width="70"
+                                height="70px"
+                            />
+                            <p class="ybd-text-black-20">电力</p class="ybd-text-black-20">
+                            <a href="#" class="ybd-text-gray-14 more"
+                                ><span>查看详情</span><i></i
+                            ></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="secion-serve mod-wrap">
+                    <div class="mod-title">
+                        <h2 class="ybd-title-black-32">技术服务</h2>
+                        <i></i>
+                    </div>
+                    <div class="serve-content">
+                        <h3 class="serve-desc serve-desc-left">软件设计咨询服务</h3>
+                        <h3 class="serve-desc serve-desc-right">电气设计咨询服务</h3>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-        <style>
-            .header {
-                background: #252221;
-                height: 80px;
-            }
-            .header .logo {
-                margin-top: 20px;
-                float: left;
-            }
-            .header .nav {
-                font-size: 18px;
-                font-family: PingFangSC-Regular, PingFang SC;
-                font-weight: 400;
-                color: rgba(227, 227, 227, 1);
-                line-height: 25px;
-                float: right;
-            }
-            .header .nav > li {
-                float: left;
-                line-height: 80px;
-                margin-left: 50px;
-                cursor: pointer;
-                position: relative;
-            }
-            .header .nav li:hover {
-                color: #ed7d31;
-            }
-            .header .nav li:hover .dropdown {
-                display: block;
-            }
-            .header .nav li .dropdown {
-                position: absolute;
-                width: 141px;
-                top: 78px;
-                left: -31px;
-                padding-top: 8px;
-                display: none;
-            }
-            .header .nav li .dropdown .triangle {
-                width: 10px;
-                height: 10px;
-                background: rgba(37, 34, 33, 1);
-                position: absolute;
-                left: 50%;
-                display: block;
-                transform: rotate(45deg);
-                top: 3px;
-                margin-left: -6px;
-            }
-            .header .nav li .dropdown > ul {
-                background: rgba(37, 34, 33, 1);
-                box-shadow: 0px 8px 40px 6px rgba(0, 0, 0, 0.1);
-                padding: 15px 0;
-                border-radius: 6px;
-            }
-            .header .nav li .dropdown > ul > li {
-                color: #fff;
-                line-height: 1;
-                padding: 15px 0 15px 30px;
-            }
-            .header .nav li .dropdown > ul > li:hover {
-                color: #ed7d31;
-            }
-        </style>
     </body>
 </html>
