--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
         <title>盈蓓德官网</title>
     </head>
     <body>
-        <div class="home" style="height: 10000px;">
+        <div class="home">
             <div class="header">
                 <div class="mod-wrap">
                     <a href="#">
@@ -245,8 +245,74 @@
                         <h3 class="serve-desc serve-desc-right">电气设计咨询服务</h3>
                     </div>
                 </div>
-
+                <div class="secion-partner ">
+                    <div class="mod-title">
+                        <h2 class="ybd-title-black-32">合作伙伴</h2>
+                        <i></i>
+                    </div>
+                    <div class="partner-list mod-wrap">
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                        <a class="item" href="#"><img src="" alt="" width="100" height="100"></a>
+                    </div>
+                
+                </div>
             </div>
+            <div class="footer">
+                <div class="mod-wrap">
+                     <div class="company-info">
+                         <h3>上海盈蓓德智能科技有限公司</h3>
+                         <p>地  址：上海市闵行区万科云新龙路1333弄28幢328室 </p>
+                         <p>联系人：崔玮</p>
+                         <p>邮  箱：YBDinfo_001@163.com</p>
+                         <p>电  话：18616502435</p>
+                         <p class="copyright">© 2019上海盈蓓德智能科技有限公司　All Rights Reserved</p>
+                     </div>
+                     <div class="footer-nav">
+                         <dl>
+                             <dt>软件产品</dt>
+                             <dd><a href="#">eDAQ</a></dd>
+                             <dd><a href="#">EVT</a></dd>
+                             <dd><a href="#">ETP</a></dd>
+                         </dl>
+                         <dl>
+                             <dt>仪器设备</dt>
+                             <dd><a href="">eBox</a></dd>
+                             <dd><a href="">ePad</a></dd>
+                             <dd><a href="">eNode</a></dd>
+                         </dl>
+                         <dl>
+                             <dt>测试系统</dt>
+                             <dd><a href="">汽车</a></dd>
+                             <dd><a href="">消费电子</a></dd>
+                             <dd><a href="">军工</a></dd>
+                             <dd><a href="">船舶</a></dd>
+                             <dd><a href="">电力</a></dd>
+                         </dl>
+                         <dl>
+                             <dt>技术服务</dt>
+                         </dl>
+                         <dl>
+                             <dt>关于我们</dt>
+                             <dd><a href="">公司简介</a></dd>
+                             <dd><a href="">合作伙伴</a></dd>
+                             <dd><a href="">联系我们</a></dd>
+                         </dl>
+                     </div>
+                </div>
+            </div>
+            <style></style>
         </div>
     </body>
 </html>
