--- a/pages/index.html
+++ b/pages/index.html
@@ -4,17 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+        <!-- 首页轮播图样式，仅首页引入 -->
+        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+
+        <!-- 页面统一样式 -->
         <link rel="stylesheet" href="../style/reset.css" />
         <link rel="stylesheet" href="../style/public .css" />
-        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
         <link rel="stylesheet" href="../style/ybd.css" />
-        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-        <script src="../js/ybd.js"></script>
+
         <title>盈蓓德官网</title>
     </head>
-    <body>
+    <!-- 禁止复制图片/文字 -->
+    <body oncontextmenu="return false"  onselectstart="return false"  ondragstart="return false">
         <div class="home">
-            <div class="header">
+            <div class="header" id="index-header">
                 <div class="mod-wrap">
                     <a href="#">
                         <img
@@ -314,5 +318,9 @@
             </div>
             <style></style>
         </div>
+        <script src="../js/jquery.min.js"></script>
+        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+        <script src="../js/ybd.js"></script>
+    
     </body>
 </html>
