静态页面开发

--- a/pages/view.html
+++ b/pages/view.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 
         <!-- 页面统一样式 -->
         <link rel="stylesheet" href="../style/reset.css" />
@@ -18,7 +18,7 @@
         <div class="view">
             <div class="header header-view">
                 <div class="mod-wrap nav-lv1">
-                    <a href="#">
+                    <a href="./index.html">
                         <img
                             class="logo"
                             alt="盈蓓德官网"
@@ -42,7 +42,7 @@
                         <div class="nav-lv2">
                             <div class="mod-wrap">
                                 <p class="nav-lv2-list">
-                                    <a  class="selected" href="#">xxx</a>
+                                    <a class="selected" href="#">xxx</a>
                                     <a href="#">xxx</a>
                                     <a href="#">xxx</a>
                                     <a href="#">xxx</a>
@@ -53,7 +53,7 @@
                         <div class="nav-lv3">
                             <div class="mod-wrap">
                                 <p class="nav-lv3-list">
-                                    <a  class="selected" href="#">汽车宽域型氧气传感器性能测试台</a>
+                                    <a class="selected" href="#">汽车宽域型氧气传感器性能测试台</a>
                                     <a href="#">汽车宽域型氧气传感器性能测试台</a>
                                     <a href="#">汽车宽域型氧气传感器性能测试台</a>
                                     <a href="#">汽车宽域型氧气传感器性能测试台</a>
@@ -80,10 +80,51 @@
                     </div>
                 </div>
             </div>
-            <div class="main" style="height: 1000px;">
-                 
-
-                
+            <div class="main">
+                <!-- 富文本内容1，灰色底部分产品描述。 -->
+                <div class="richtext-prod-info">
+                    <div class="mod-wrap">
+                        <h1 style="font-size:32px;color:rgba(37,34,33,1);text-align:center;margin-bottom:20px;">
+                            变电站高压接头发热应急带电处理装置
+                        </h1>
+                        <p style="font-size:14px;color: #252221;width: 504px;margin: 0 auto;margin-bottom: 30px;;">
+                            一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字一段文字
+                        </p>
+                        <img
+                            style="margin: 0 auto;display: block;"
+                            width="500"
+                            src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=279129827,2825887711&fm=26&gp=0.jpg"
+                            alt=""
+                        />
+                    </div>
+                </div>
+                <!-- 富文本内容2，功能技术应用等介绍说明 -->
+                <div class="richtext-prod-intro mod-wrap">
+                    <div class="intro-item">
+                        <div class="intro-l">
+                            <h4>技术要点</h4>
+                        </div>
+                        <div class="intro-r">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·带电处理接头过热状况</p>
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·云平台查询温度数据</p style="font-size:14px;line-height:30px">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·无线传输数据至云平台</p style="font-size:14px;line-height:30px">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·窄带物联网技术，低功耗，信号强</p>
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·高温报警至监管人员手机</p style="font-size:14px;line-height:30px">
+                        </div>
+                    </div>
+                    <div class="intro-item">
+                        <div class="intro-l">
+                            <h4>技术要点</h4>
+                        </div>
+                        <div class="intro-r">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况·带电处理接头过热状况</p>
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·云平台查询温度数据</p style="font-size:14px;line-height:30px">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·无线传输数据至云平台</p style="font-size:14px;line-height:30px">
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·窄带物联网技术，低功耗，信号强</p>
+                            <p style="font-size:14px;line-height:30px;color:rgba(37,34,33,1);">·高温报警至监管人员手机</p style="font-size:14px;line-height:30px">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="footer">
                 <div class="mod-wrap">
