--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
         <div class="home">
             <div class="header" id="index-header">
                 <div class="mod-wrap">
-                    <a href="#">
+                    <a href="./index.html">
                         <img
                             class="logo"
                             alt="盈蓓德官网"
@@ -30,13 +30,13 @@
                         />
                     </a>
                     <ul class="nav">
-                        <li>首页</li>
+                        <li><a href="./index.html">首页</a></li>
                         <li>
                             软件产品
                             <div class="dropdown">
                                 <i class="triangle"></i>
                                 <ul>
-                                    <li>消费电子</li>
+                                    <li><a href="./view.html">消费电子</a></li>
                                     <li>消费电子</li>
                                     <li>消费电子</li>
                                     <li>消费电子</li>
