--- a/pages/view.html
+++ b/pages/view.html
@@ -32,9 +32,9 @@
                         <li>软件产品</li>
                         <li>仪器设备</li>
                         <li>测试系统</li>
-                        <li class="selected">技术服务</li>
-                        <li>关于我们</li>
-                        <li>联系我们</li>
+                        <li class="selected"><a href="./serve.html">技术服务</a></li>
+                        <li><a href="./about.html">关于我们</a></li>
+                        <li><a href="./contact.html">联系我们</a></li>
                     </ul>
                 </div>
                 <div class="view-nav-fixed-wrap" id="view-nav-fixed-wrap">
