--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,7 +58,7 @@
                             </div>
                         </li>
                         <li>
-                            测试系统
+                            <a href="./view.html">测试系统</a>
                             <div class="dropdown">
                                 <i class="triangle"></i>
                                 <ul>
@@ -70,9 +70,9 @@
                                 </ul>
                             </div>
                         </li>
-                        <li>技术服务</li>
-                        <li>关于我们</li>
-                        <li>联系我们</li>
+                        <li><a href="./serve.html">技术服务</a></li>
+                        <li><a href="./about.html">关于我们</a></li>
+                        <li><a href="./contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </div>
